# forecast_cli

./: Cargo.toml  api_key_file.txt  api_key_txt_file.txt  notes.md
src/: api_key.rs  ask_user_to_sign_up.rs  get_weather_data.rs  main.rs  weather_data.rs
