[package]
name = "forecast_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
error-chain = "0.12.4"
lazy_static = "1.4.0"
iso_country = "0.1.4"
